add discussions get loop